About Page Updates and File Naming Changed
Copy pasted layout of the Title bar (w/ logo) at the top and red left menu are these files: 
Website_Frame.html
Frame_Format.css

About Page specific files are:
About_Page.html
About_Format.css

The Side_Buttons.js file is the JavaScript file for controlling what the buttons do, and as of right now all they do is change the color of the text on the red column to yellow.

--- a/LazyPepper Website/About_Page.html
+++ b/LazyPepper Website/About_Page.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website Title</title>
     <link rel="stylesheet" href="About_Format.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="Side_Buttons.js"></script>
 </head>
 
 <body>
@@ -17,15 +19,16 @@
 
     <nav class="red-column">
         <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Charcuterie</a></li>
-            <li><a href="#">Cutting</a></li>
-            <li><a href="#">Specialty</a></li>
-            <li><a href="#">Custom</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="#" class="menu-button" style="color: yellow">About</a></li>
+            <li><a href="#" class="menu-button" style="color: black">Charcuterie</a></li>
+            <li><a href="#" class="menu-button" style="color: black">Cutting</a></li>
+            <li><a href="#" class="menu-button" style="color: black">Specialty</a></li>
+            <li><a href="#" class="menu-button" style="color: black">Custom</a></li>
+            <li><a href="#" class="menu-button" style="color: black">Contact</a></li>
+            <li><a href="#" class="menu-button" style="color: black">Gallery</a></li>
         </ul>
     </nav>
+
 </body>
 
 </html>
