--- a/LazyPepper Website/Website_Frame.html
+++ b/LazyPepper Website/Website_Frame.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website Title</title>
-    <link rel="stylesheet" href="About_Format.css">
+    <link rel="stylesheet" href="Frame_Format.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="Side_Buttons.js"></script>
 </head>
@@ -19,13 +19,13 @@
 
     <nav class="red-column">
         <ul>
-            <li><a href="#" class="menu-button">About</a></li>
-            <li><a href="#" class="menu-button">Charcuterie</a></li>
-            <li><a href="#" class="menu-button">Cutting</a></li>
-            <li><a href="#" class="menu-button">Specialty</a></li>
-            <li><a href="#" class="menu-button">Custom</a></li>
-            <li><a href="#" class="menu-button">Contact</a></li>
-            <li><a href="#" class="menu-button">Gallery</a></li>
+            <li><a href="#" class="menu-button" style="color: black">About</a></li>
+            <li><a href="#" class="menu-button" style="color: black">Charcuterie</a></li>
+            <li><a href="#" class="menu-button" style="color: black">Cutting</a></li>
+            <li><a href="#" class="menu-button" style="color: black">Specialty</a></li>
+            <li><a href="#" class="menu-button" style="color: black">Custom</a></li>
+            <li><a href="#" class="menu-button" style="color: black">Contact</a></li>
+            <li><a href="#" class="menu-button" style="color: black">Gallery</a></li>
         </ul>
     </nav>
 
