Finished Visual About Page
So, none of the buttons work (link to Facebook and Instagram as well as the left menu buttons), but the webpage it self is setup exactly how it should be.

--- a/LazyPepper Website/Website_Frame.html
+++ b/LazyPepper Website/Website_Frame.html
@@ -17,18 +17,23 @@
 
     </header>
 
-    <nav class="red-column">
-        <ul>
-            <li><a href="#" class="menu-button" style="color: black">About</a></li>
-            <li><a href="#" class="menu-button" style="color: black">Charcuterie</a></li>
-            <li><a href="#" class="menu-button" style="color: black">Cutting</a></li>
-            <li><a href="#" class="menu-button" style="color: black">Specialty</a></li>
-            <li><a href="#" class="menu-button" style="color: black">Custom</a></li>
-            <li><a href="#" class="menu-button" style="color: black">Contact</a></li>
-            <li><a href="#" class="menu-button" style="color: black">Gallery</a></li>
-        </ul>
-    </nav>
+    <div class="main-container">
+        <nav class="red-column">
+            <ul>
+                <li><a href="#" class="menu-button" style="color: black">About</a></li>
+                <li><a href="#" class="menu-button" style="color: black">Charcuterie</a></li>
+                <li><a href="#" class="menu-button" style="color: black">Cutting</a></li>
+                <li><a href="#" class="menu-button" style="color: black">Specialty</a></li>
+                <li><a href="#" class="menu-button" style="color: black">Custom</a></li>
+                <li><a href="#" class="menu-button" style="color: black">Contact</a></li>
+                <li><a href="#" class="menu-button" style="color: black">Gallery</a></li>
+            </ul>
+        </nav>
 
+        <div class="content">
+            <!-- Put all other information Here!!! -->
+        </div>
+    </div>
 </body>
 
 </html>
