--- a/LazyPepper Website/About_Page.html
+++ b/LazyPepper Website/About_Page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>LazyPepper Designs</title>
     <link rel="stylesheet" href="About_Format.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="Side_Buttons.js"></script>
@@ -17,18 +17,60 @@
 
     </header>
 
-    <nav class="red-column">
-        <ul>
-            <li><a href="#" class="menu-button" style="color: yellow">About</a></li>
-            <li><a href="#" class="menu-button" style="color: black">Charcuterie</a></li>
-            <li><a href="#" class="menu-button" style="color: black">Cutting</a></li>
-            <li><a href="#" class="menu-button" style="color: black">Specialty</a></li>
-            <li><a href="#" class="menu-button" style="color: black">Custom</a></li>
-            <li><a href="#" class="menu-button" style="color: black">Contact</a></li>
-            <li><a href="#" class="menu-button" style="color: black">Gallery</a></li>
-        </ul>
-    </nav>
+    <div class="main-container">
+        <nav class="red-column">
+            <ul>
+                <li><a href="#" class="menu-button" style="color: yellow">About</a></li>
+                <li><a href="#" class="menu-button" style="color: black">Charcuterie</a></li>
+                <li><a href="#" class="menu-button" style="color: black">Cutting</a></li>
+                <li><a href="#" class="menu-button" style="color: black">Specialty</a></li>
+                <li><a href="#" class="menu-button" style="color: black">Custom</a></li>
+                <li><a href="#" class="menu-button" style="color: black">Contact</a></li>
+                <li><a href="#" class="menu-button" style="color: black">Gallery</a></li>
+            </ul>
+        </nav>
 
+        <div class="content">
+            <div class="image-container">
+                <img src="About_Page_Image_2.jpg" alt="Image 1">
+                <img src="About_Page_Image_1.jpg" alt="Image 2">
+
+            </div>
+            <div class="text-box">
+                <h2>About the Business</h2>
+                <p>In Congress, July 4, 1776
+                    The unanimous Declaration of the thirteen united States of America,
+                    When in the Course of human events, it becomes necessary for one people to dissolve the
+                    political bands which have connected them with another, and to assume among the powers
+                    of the earth, the separate and equal station to which the Laws of Nature and of Nature's God
+                    entitle them, a decent respect to the opinions of mankind requires that they should declare
+                    the causes which impel them to the separation. We hold these truths to be self-evident,
+                    that all men are created equal, that they are endowed by their Creator with certain
+                    unalienable Rights, that among these are Life, Liberty and the pursuit of Happiness.--That
+                    to secure these rights, Governments are instituted among Men, deriving their just powers
+                    from the consent of the governed, --That whenever any Form of Government becomes destructive
+                    of these ends, it is the Right of the People to alter or to abolish it, and to institute new
+                    Government, laying its foundation on such principles and organizing its powers in such form,
+                    as to them shall seem most likely to effect their Safety and Happiness. Prudence, indeed, will
+                    dictate that Governments long established should not be changed for light and transient causes;
+                    and accordingly all experience hath shewn, that mankind are more disposed to suffer, while evils
+                    are sufferable, than to right themselves by abolishing the forms to which they are accustomed.
+                    But when a long train of abuses and usurpations, pursuing invariably the same Object evinces
+                    a design to reduce them under absolute Despotism, it is their right, it is their duty, to throw off
+                    such Government, and to provide new Guards for their future security.--Such has been the patient
+                    sufferance of these Colonies; and such is now the necessity which constrains them to alter their
+                    former Systems of Government. The history of the present King of Great Britain is a history of
+                    repeated injuries and usurpations, all having in direct object the establishment of an absolute
+                    Tyranny over these States. To prove this, let Facts be submitted to a candid world.</p>
+            </div>
+            <div class="image-logos">
+                <img src="Facebook_Logo.jpg" alt="Facebook logo">
+                <img src="Instagram_Logo.jpg" alt="Instagram logo">
+
+            </div>
+
+        </div>
+    </div>
 </body>
 
 </html>
