About Page Changes
Talked to my dad about some stuff he wanted different and changed them based off of what he said. Removed one of the pictures at the top. Centered the singular picture and made it bigger. Made the Business name at the top bigger as well.

--- a/LazyPepper Website/About_Page.html
+++ b/LazyPepper Website/About_Page.html
@@ -12,7 +12,9 @@
 
 <body>
     <header class="brown-header">
-        <h1 class="header-text">LazyPepper Designs</h1>
+        <div class="brown-bar">
+            <h1>LazyPepper Designs</h1>
+        </div>
         <img src="LazyPepperLogo.jpg" alt="Logo" class="header-logo">
 
     </header>
@@ -33,7 +35,7 @@
         <div class="content">
             <div class="image-container">
                 <img src="About_Page_Image_2.jpg" alt="Image 1">
-                <img src="About_Page_Image_1.jpg" alt="Image 2">
+                <!--<img src="About_Page_Image_1.jpg" alt="Image 2">-->
 
             </div>
             <div class="text-box">
