About Page Updates
Updated the "About the business" section to what my dad wanted. Changed the facebook and Instagram logos to their actual logos. Made those logos links to the facebook and Instagram login pages (I'll update these when I get the information from my dad).

--- a/LazyPepper Website/About_Page.html
+++ b/LazyPepper Website/About_Page.html
@@ -40,34 +40,47 @@
             </div>
             <div class="text-box">
                 <h2>About the Business</h2>
-                <p>In Congress, July 4, 1776
-                    The unanimous Declaration of the thirteen united States of America,
-                    When in the Course of human events, it becomes necessary for one people to dissolve the
-                    political bands which have connected them with another, and to assume among the powers
-                    of the earth, the separate and equal station to which the Laws of Nature and of Nature's God
-                    entitle them, a decent respect to the opinions of mankind requires that they should declare
-                    the causes which impel them to the separation. We hold these truths to be self-evident,
-                    that all men are created equal, that they are endowed by their Creator with certain
-                    unalienable Rights, that among these are Life, Liberty and the pursuit of Happiness.--That
-                    to secure these rights, Governments are instituted among Men, deriving their just powers
-                    from the consent of the governed, --That whenever any Form of Government becomes destructive
-                    of these ends, it is the Right of the People to alter or to abolish it, and to institute new
-                    Government, laying its foundation on such principles and organizing its powers in such form,
-                    as to them shall seem most likely to effect their Safety and Happiness. Prudence, indeed, will
-                    dictate that Governments long established should not be changed for light and transient causes;
-                    and accordingly all experience hath shewn, that mankind are more disposed to suffer, while evils
-                    are sufferable, than to right themselves by abolishing the forms to which they are accustomed.
-                    But when a long train of abuses and usurpations, pursuing invariably the same Object evinces
-                    a design to reduce them under absolute Despotism, it is their right, it is their duty, to throw off
-                    such Government, and to provide new Guards for their future security.--Such has been the patient
-                    sufferance of these Colonies; and such is now the necessity which constrains them to alter their
-                    former Systems of Government. The history of the present King of Great Britain is a history of
-                    repeated injuries and usurpations, all having in direct object the establishment of an absolute
-                    Tyranny over these States. To prove this, let Facts be submitted to a candid world.</p>
+                <p>
+                    Hello, I’m Eddie Moore, owner of LazyPepper Designs. We’re located in Kingstree, SC. A nice, quiet
+                    place to live, work and enjoy the beautiful surroundings that God has blessed us with. I have a
+                    wonderful family that doesn’t mind supporting my hobbies. <br><br>
+
+                    If you’re wondering where the name LazyPepper comes from, well it’s a simple story. I have been
+                    crafting, drawing, and woodworking for a long time. A gift my father and brother instilled in me
+                    when I was a teenager. My dad used to make Christmas gifts for our family every year and made some
+                    of the furniture in our house, including an oak banquet table for the dining room. I learned to use
+                    hand
+                    and power tools back then as well as learning to work on cars and welding too. I learned to bake and
+                    make sweets from my mom and make BBQ and chicken bog from my dad. In my twenties, our family did a
+                    little catering on the side. I continued to cook for people off and on and eventually came up with
+                    The Lazy Pepper as my catering name. I still cook and bake but now I only do it for fun. Over the
+                    years
+                    I continued to dabble in woodworking and even built my own kitchen cabinets during our house
+                    renovations. That brings us to my woodworking business. I became fascinated with charcuterie and
+                    cutting boards and then epoxy work. The more I experimented, the more fun and interesting it became.
+                    I started selling at our town’s farmer’s market and did well enough to continue the efforts. It then
+                    became necessary to come up with a name. I always liked LazyPepper and decided to stick with it.
+                    Even though the name fits better with food, it certainly gets people’s attention, which is what a
+                    good
+                    business name should do. I currently make charcuterie and cutting boards, noodle boards, epoxy river
+                    boards,
+                    wine barrel crafts and furniture. Although this is still not my primary occupation, I enjoy it
+                    enough toalways learn new things and try to perfect my craft. I hope you enjoy browsing our website
+                    and come
+                    back to see what new things we have from time to time. <br><br>
+
+                    Thank you for stopping by, <br><br>
+
+                    Eddie
+                </p>
             </div>
             <div class="image-logos">
-                <img src="Facebook_Logo.jpg" alt="Facebook logo">
-                <img src="Instagram_Logo.jpg" alt="Instagram logo">
+                <div class="clickable-image" data-href="https://www.facebook.com/">
+                    <img src="Facebook_Logo.jpg" alt="Facebook logo">
+                </div>
+                <div class="clickable-image" data-href="https://www.instagram.com/">
+                    <img src="Instagram_Logo.jpg" alt="Instagram logo">
+                </div>
 
             </div>
 
