Big Updates to some files and added Gallery Page
I updated the frames to match the changes I made to the About page. I also created the Gallery Page. I made the left red column buttons actually change to the different pages as well (They work the way they are suppose too).

--- a/LazyPepper Website/About_Page.html
+++ b/LazyPepper Website/About_Page.html
@@ -7,7 +7,7 @@
     <title>LazyPepper Designs</title>
     <link rel="stylesheet" href="About_Format.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="Side_Buttons.js"></script>
+    <script src="LazyPepper_Scripts.js"></script>
 </head>
 
 <body>
@@ -22,20 +22,19 @@
     <div class="main-container">
         <nav class="red-column">
             <ul>
-                <li><a href="#" class="menu-button" style="color: yellow">About</a></li>
-                <li><a href="#" class="menu-button" style="color: black">Charcuterie</a></li>
-                <li><a href="#" class="menu-button" style="color: black">Cutting</a></li>
-                <li><a href="#" class="menu-button" style="color: black">Specialty</a></li>
-                <li><a href="#" class="menu-button" style="color: black">Custom</a></li>
-                <li><a href="#" class="menu-button" style="color: black">Contact</a></li>
-                <li><a href="#" class="menu-button" style="color: black">Gallery</a></li>
+                <li><a href="#" id="aboutButton" style="color: yellow">About</a></li>
+                <li><a href="#" id="charcuterieButton" style="color: black">Charcuterie</a></li>
+                <li><a href="#" id="cuttingButton" style="color: black">Cutting</a></li>
+                <li><a href="#" id="specialtyButton" style="color: black">Specialty</a></li>
+                <li><a href="#" id="customButton" style="color: black">Custom</a></li>
+                <li><a href="#" id="contactButton" style="color: black">Contact</a></li>
+                <li><a href="#" id="galleryButton" style="color: black">Gallery</a></li>
             </ul>
         </nav>
 
         <div class="content">
             <div class="image-container">
                 <img src="About_Page_Image_2.jpg" alt="Image 1">
-                <!--<img src="About_Page_Image_1.jpg" alt="Image 2">-->
 
             </div>
             <div class="text-box">
@@ -75,10 +74,12 @@
                 </p>
             </div>
             <div class="image-logos">
-                <div class="clickable-image" data-href="https://www.facebook.com/">
+                <div class="clickable-image"
+                    data-href="https://www.facebook.com/profile.php?id=61552378622970&mibextid=9R9pXO">
                     <img src="Facebook_Logo.jpg" alt="Facebook logo">
                 </div>
-                <div class="clickable-image" data-href="https://www.instagram.com/">
+                <div class="clickable-image"
+                    data-href="https://instagram.com/edd4584?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr">
                     <img src="Instagram_Logo.jpg" alt="Instagram logo">
                 </div>
 
