--- a/LazyPepper Website/Website_Frame.html
+++ b/LazyPepper Website/Website_Frame.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>LazyPepper Designs</title>
     <link rel="stylesheet" href="Frame_Format.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="Side_Buttons.js"></script>
+    <script src="LazyPepper_Scripts.js"></script>
 </head>
 
 <body>
     <header class="brown-header">
-        <h1 class="header-text">LazyPepper Designs</h1>
+        <div class="brown-bar">
+            <h1>LazyPepper Designs</h1>
+        </div>
         <img src="LazyPepperLogo.jpg" alt="Logo" class="header-logo">
 
     </header>
@@ -20,13 +22,13 @@
     <div class="main-container">
         <nav class="red-column">
             <ul>
-                <li><a href="#" class="menu-button" style="color: black">About</a></li>
-                <li><a href="#" class="menu-button" style="color: black">Charcuterie</a></li>
-                <li><a href="#" class="menu-button" style="color: black">Cutting</a></li>
-                <li><a href="#" class="menu-button" style="color: black">Specialty</a></li>
-                <li><a href="#" class="menu-button" style="color: black">Custom</a></li>
-                <li><a href="#" class="menu-button" style="color: black">Contact</a></li>
-                <li><a href="#" class="menu-button" style="color: black">Gallery</a></li>
+                <li><a href="#" id="aboutButton" style="color: black">About</a></li>
+                <li><a href="#" id="charcuterieButton" style="color: black">Charcuterie</a></li>
+                <li><a href="#" id="cuttingButton" style="color: black">Cutting</a></li>
+                <li><a href="#" id="specialtyButton" style="color: black">Specialty</a></li>
+                <li><a href="#" id="customButton" style="color: black">Custom</a></li>
+                <li><a href="#" id="contactButton" style="color: black">Contact</a></li>
+                <li><a href="#" id="galleryButton" style="color: black">Gallery</a></li>
             </ul>
         </nav>
 
