About Page Complete Rework
Changed basically everything with the about page. Frames should be updated as well. If not Ill fix them in the next commit

--- a/LazyPepper Website/About_Page.html
+++ b/LazyPepper Website/About_Page.html
@@ -11,57 +11,84 @@
 </head>
 
 <body>
-    <header class="brown-header">
-        <div class="brown-bar">
-            <h1>LazyPepper Designs</h1>
-        </div>
+    <header class="header-logo">
         <img src="LazyPepperLogo.jpg" alt="Logo" class="header-logo">
-
     </header>
 
     <div class="main-container">
         <nav class="red-column">
-            <ul>
-                <li><a href="#" id="aboutButton" style="color: yellow">About</a></li>
-                <li><a href="#" id="charcuterieButton" style="color: black">Charcuterie</a></li>
-                <li><a href="#" id="cuttingButton" style="color: black">Cutting</a></li>
-                <li><a href="#" id="specialtyButton" style="color: black">Specialty</a></li>
-                <li><a href="#" id="customButton" style="color: black">Custom</a></li>
-                <li><a href="#" id="contactButton" style="color: black">Contact</a></li>
-                <li><a href="#" id="galleryButton" style="color: black">Gallery</a></li>
-            </ul>
+            <!-- Change class="" to the currentlly opened page-->
+            <a href="#" id="aboutButton" class="active">About</a>
+            <a href="#" id="charcuterieButton">Charcuterie</a>
+            <a href="#" id="cuttingButton">Cutting</a>
+            <a href="#" id="specialtyButton">Specialty</a>
+            <a href="#" id="customButton">Custom</a>
+            <a href="#" id="contactButton">Contact</a>
+            <a href="#" id="galleryButton">Gallery</a>
         </nav>
 
         <div class="content">
             <div class="image-container">
-                <img src="About_Page_Image_2.jpg" alt="Image 1">
+                <img src="About_Page_Banner.jpg" alt="Image 1">
 
             </div>
-            <div class="text-box">
-                <h2>About the Business</h2>
-                <p>
-                    Hello, I’m Eddie Moore, owner of LazyPepper Designs. We’re located in Kingstree, SC. A nice, quiet
-                    place to live, work and enjoy the beautiful surroundings that God has blessed us with. I have a
-                    wonderful family that doesn’t mind supporting my hobbies. <br><br>
 
-                    If you’re wondering where the name LazyPepper comes from, well it’s a simple story. I have been
-                    crafting, drawing, and woodworking for a long time. A gift my father and brother instilled in me
-                    when I was a teenager. My dad used to make Christmas gifts for our family every year and made some
-                    of the furniture in our house, including an oak banquet table for the dining room. I learned to use
-                    hand
-                    and power tools back then as well as learning to work on cars and welding too. I learned to bake and
-                    make sweets from my mom and make BBQ and chicken bog from my dad. In my twenties, our family did a
-                    little catering on the side. I continued to cook for people off and on and eventually came up with
-                    The Lazy Pepper as my catering name. I still cook and bake but now I only do it for fun. Over the
-                    years
-                    I continued to dabble in woodworking and even built my own kitchen cabinets during our house
-                    renovations. That brings us to my woodworking business. I became fascinated with charcuterie and
-                    cutting boards and then epoxy work. The more I experimented, the more fun and interesting it became.
-                    I started selling at our town’s farmer’s market and did well enough to continue the efforts. It then
-                    became necessary to come up with a name. I always liked LazyPepper and decided to stick with it.
-                    Even though the name fits better with food, it certainly gets people’s attention, which is what a
-                    good
-                    business name should do. I currently make charcuterie and cutting boards, noodle boards, epoxy river
+            <div class="image-container">
+                <div class="text-box">
+                    <p>
+                        Hello, I’m Eddie Moore, owner of LazyPepper Designs. We’re located in Kingstree, SC. A nice,
+                        quiet
+                        place to live, work and enjoy the beautiful surroundings that God has blessed us with. I have a
+                        wonderful family that doesn’t mind supporting my hobbies.
+                    </p>
+                </div>
+                <img src="About_Page_Image_2.jpg" alt="Image 2" id="image2">
+            </div>
+
+            <div class="image-container">
+                <img src="About_Page_Image_2.jpg" alt="Image 3" id="image3">
+                <div class="text-box">
+                    <p>
+                        If you’re wondering where the name LazyPepper comes from, well it’s a simple story. I have been
+                        crafting, drawing, and woodworking for a long time. A gift my father and brother instilled in me
+                        when I was a teenager. My dad used to make Christmas gifts for our family every year and made
+                        some
+                        of the furniture in our house, including an oak banquet table for the dining room. I learned to
+                        use
+                        hand
+                        and power tools back then as well as learning to work on cars and welding too. I learned to bake
+                        and
+                        make sweets from my mom and make BBQ and chicken bog from my dad. In my twenties, our family did
+                        a
+                        little catering on the side. I continued to cook for people off and on and eventually came up
+                        with
+                        The Lazy Pepper as my catering name. I still cook and bake but now I only do it for fun.
+                    </p>
+                </div>
+            </div>
+
+            <div class="image-container">
+                <div class="text-box">
+                    <p>
+                        Over the years I continued to dabble in woodworking and even built my own kitchen cabinets
+                        during our house
+                        renovations. That brings us to my woodworking business. I became fascinated with charcuterie and
+                        cutting boards and then epoxy work. The more I experimented, the more fun and interesting it
+                        became.
+                        I started selling at our town’s farmer’s market and did well enough to continue the efforts. It
+                        then
+                        became necessary to come up with a name. I always liked LazyPepper and decided to stick with it.
+                        Even though the name fits better with food, it certainly gets people’s attention, which is what
+                        a
+                        good business name should do.
+                    </p>
+                </div>
+                <img src="About_Page_Image_2.jpg" alt="Image 4" id="image4">
+            </div>
+
+            <div class="text-box">
+                <p>
+                    I currently make charcuterie and cutting boards, noodle boards, epoxy river
                     boards,
                     wine barrel crafts and furniture. Although this is still not my primary occupation, I enjoy it
                     enough toalways learn new things and try to perfect my craft. I hope you enjoy browsing our website
