--- a/LazyPepper Website/Website_Frame.html
+++ b/LazyPepper Website/Website_Frame.html
@@ -11,25 +11,20 @@
 </head>
 
 <body>
-    <header class="brown-header">
-        <div class="brown-bar">
-            <h1>LazyPepper Designs</h1>
-        </div>
+    <header class="header-logo">
         <img src="LazyPepperLogo.jpg" alt="Logo" class="header-logo">
-
     </header>
 
     <div class="main-container">
         <nav class="red-column">
-            <ul>
-                <li><a href="#" id="aboutButton" style="color: black">About</a></li>
-                <li><a href="#" id="charcuterieButton" style="color: black">Charcuterie</a></li>
-                <li><a href="#" id="cuttingButton" style="color: black">Cutting</a></li>
-                <li><a href="#" id="specialtyButton" style="color: black">Specialty</a></li>
-                <li><a href="#" id="customButton" style="color: black">Custom</a></li>
-                <li><a href="#" id="contactButton" style="color: black">Contact</a></li>
-                <li><a href="#" id="galleryButton" style="color: black">Gallery</a></li>
-            </ul>
+            <!-- Change class="" to the currentlly opened page-->
+            <a href="#" id="aboutButton" class="active">About</a>
+            <a href="#" id="charcuterieButton">Charcuterie</a>
+            <a href="#" id="cuttingButton">Cutting</a>
+            <a href="#" id="specialtyButton">Specialty</a>
+            <a href="#" id="customButton">Custom</a>
+            <a href="#" id="contactButton">Contact</a>
+            <a href="#" id="galleryButton">Gallery</a>
         </nav>
 
         <div class="content">
