Updated Colors for About/Gallery

--- a/LazyPepper Website/Gallery_Page.html
+++ b/LazyPepper Website/Gallery_Page.html
@@ -29,7 +29,7 @@
 
         <div class="content">
             <div class="image-container">
-                <img src="About_Page_Image_2.jpg" alt="Image 1">
+                <img src="About_Page_Banner.jpg" alt="Image 1" id="image1">
                 <div class="text-box">
                     <h2>Pig Pickin' 2022</h2>
                     <p>
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="image-container">
-                <img src="About_Page_Image_2.jpg" alt="Image 2">
+                <img src="About_Page_Image_2.jpg" alt="Image 2" id="image2">
                 <div class="text-box">
                     <h2>Picture Title</h2>
                     <p>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="image-container">
-                <img src="About_Page_Image_2.jpg" alt="Image 3">
+                <img src="About_Page_Image_3.jpg" alt="Image 3" id="image3">
                 <div class="text-box">
                     <h2>Picture Title</h2>
                     <p>
