--- a/LazyPepper Website/Website_Frame.html
+++ b/LazyPepper Website/Website_Frame.html
@@ -17,14 +17,21 @@
 
     <div class="main-container">
         <nav class="red-column">
-            <!-- Change class="" to the currentlly opened page-->
-            <a href="#" id="aboutButton" class="active">About</a>
-            <a href="#" id="charcuterieButton">Charcuterie</a>
-            <a href="#" id="cuttingButton">Cutting</a>
-            <a href="#" id="specialtyButton">Specialty</a>
-            <a href="#" id="customButton">Custom</a>
-            <a href="#" id="contactButton">Contact</a>
-            <a href="#" id="galleryButton">Gallery</a>
+            <button id="hamburger-button" class="hamburger">
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+            </button>
+            <div id="menu">
+                <!-- Change class="" to the currentlly opened page-->
+                <a href="#" id="aboutButton" class="active">About</a>
+                <a href="#" id="charcuterieButton">Charcuterie</a>
+                <a href="#" id="cuttingButton">Cutting</a>
+                <a href="#" id="specialtyButton">Specialty</a>
+                <a href="#" id="customButton">Custom</a>
+                <a href="#" id="contactButton">Contact</a>
+                <a href="#" id="galleryButton">Gallery</a>
+            </div>
         </nav>
 
         <div class="content">
