Made the left menu a Hamburger Menu
This is not completed but my laptop is about to die. Anyway I made it to where the left menu is a hamburger to attempt to fix the look on mobile.

--- a/LazyPepper Website/Website_Frame.html
+++ b/LazyPepper Website/Website_Frame.html
@@ -11,18 +11,19 @@
 </head>
 
 <body>
-    <header class="header-logo">
-        <img src="LazyPepperLogo.jpg" alt="Logo" class="header-logo">
-    </header>
-
-    <div class="main-container">
-        <nav class="red-column">
+    <div class="main-container" id="mainContainer">
+        <nav class="red-column" id="fullMenu">
             <button id="hamburger-button" class="hamburger">
                 <div class="hamburger-line"></div>
                 <div class="hamburger-line"></div>
                 <div class="hamburger-line"></div>
             </button>
+
             <div id="menu">
+                <header class="header-logo">
+                    <img src="LazyPepperLogo.jpg" alt="Logo" class="header-logo">
+                </header>
+
                 <!-- Change class="" to the currentlly opened page-->
                 <a href="#" id="aboutButton" class="active">About</a>
                 <a href="#" id="charcuterieButton">Charcuterie</a>
