Updated the Mobile View
I fixed some issues with the new hamburger menu when viewing on a small display. It is still not perfect, but it works well enough for now.

--- a/LazyPepper Website/Gallery_Page.html
+++ b/LazyPepper Website/Gallery_Page.html
@@ -11,20 +11,28 @@
 </head>
 
 <body>
-    <header class="header-logo">
-        <img src="LazyPepperLogo.jpg" alt="Logo" class="header-logo">
-    </header>
+    <div class="main-container" id="mainContainer">
+        <nav class="red-column" id="fullMenu">
+            <button id="hamburger-button" class="hamburger">
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+            </button>
 
-    <div class="main-container">
-        <nav class="red-column">
-            <!-- Change class="" to the currentlly opened page-->
-            <a href="#" id="aboutButton">About</a>
-            <a href="#" id="charcuterieButton">Charcuterie</a>
-            <a href="#" id="cuttingButton">Cutting</a>
-            <a href="#" id="specialtyButton">Specialty</a>
-            <a href="#" id="customButton">Custom</a>
-            <a href="#" id="contactButton">Contact</a>
-            <a href="#" id="galleryButton" class="active">Gallery</a>
+            <div id="menu">
+                <header class="header-logo">
+                    <img src="LazyPepperLogo.jpg" alt="Logo" class="header-logo">
+                </header>
+
+                <!-- Change class="" to the currentlly opened page-->
+                <a href="#" id="aboutButton">About</a>
+                <a href="#" id="charcuterieButton">Charcuterie</a>
+                <a href="#" id="cuttingButton">Cutting</a>
+                <a href="#" id="specialtyButton">Specialty</a>
+                <a href="#" id="customButton">Custom</a>
+                <a href="#" id="contactButton">Contact</a>
+                <a href="#" id="galleryButton" class="active">Gallery</a>
+            </div>
         </nav>
 
         <div class="content">
