Mobile View Updates
I started this sometime last week and forgot to push them.

--- a/LazyPepper Website/About_Page.html
+++ b/LazyPepper Website/About_Page.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
 
-        <div class="content">
+        <div class="content" id="pageContent">
             <div class="image-container">
                 <img src="About_Page_Banner.jpg" alt="Image 1">
 
