Huge Update to Mobile View
Jordan Updated how the mobile view and also made changes to the HTML to help fix it.

--- a/LazyPepper Website/About_Page.html
+++ b/LazyPepper Website/About_Page.html
@@ -11,8 +11,12 @@
 </head>
 
 <body>
-    <div class="main-container" id="mainContainer">
-        <nav class="red-column" id="fullMenu">
+
+    <div class="red-column" id="fullMenu">
+        <div id="inner-nav">
+            <header id="header-logo" class="header-logo">
+                <img src="LazyPepperLogo.jpg" alt="Logo" class="header-logo">
+            </header>
             <button id="hamburger-button" class="hamburger">
                 <div class="hamburger-line"></div>
                 <div class="hamburger-line"></div>
@@ -20,9 +24,6 @@
             </button>
 
             <div id="menu">
-                <header class="header-logo">
-                    <img src="LazyPepperLogo.jpg" alt="Logo" class="header-logo">
-                </header>
 
                 <!-- Change class="" to the currentlly opened page-->
                 <a href="#" id="aboutButton" class="active">About</a>
@@ -33,7 +34,11 @@
                 <a href="#" id="contactButton">Contact</a>
                 <a href="#" id="galleryButton">Gallery</a>
             </div>
-        </nav>
+        </div>
+    </div>
+
+    <div class="main-container" id="mainContainer">
+
 
         <div class="content" id="pageContent">
             <div class="image-container">
