Continuation of Previous Commit
I made a boo boo and this is the fix

--- a/LazyPepper Website/Contact_Page.html
+++ b/LazyPepper Website/Contact_Page.html
@@ -25,7 +25,7 @@
 
             <div id="menu">
 
-                <!-- Change class="" to the currentlly opened page-->
+                <!-- Change class="active" to the currentlly opened page-->
                 <a href="#" id="aboutButton">About</a>
                 <a href="#" id="charcuterieButton">Charcuterie</a>
                 <a href="#" id="cuttingButton">Cutting</a>
@@ -41,7 +41,6 @@
 
 
         <div class="content" id="pageContent">
-            <!-- Put all other information Here!!! -->
             <div class="image-container">
                 <img src="Contact_Image_1.jpg" alt="Image 1">
 
